--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,9 @@
 	    	<div class="header">
 				<nav>
 				    <ul class="nav nav-pills pull-right">
-					    <li><%= link_to "Home", "/" %></li>
-					    <li><%= link_to "About", "/about" %></li>
+					    <li><%= link_to "Home", root_url %></li>
+					    <li><%= link_to "About", about_url %></li>
+					    <li><%= link_to "Posts", posts_url %></li>
 				    </ul>
 				</nav>
 				<div class="page-header"> <h1><%= link_to "crumblr // ", "/"%><small>Home baked good</small></h1>
