--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,9 +1,4 @@
-<h1>Welcome</h1>
-
-<p>
-	This is the landing page for crumblr, a baking blog made using Ruby on Rails.
-</p>
-
-<p>
-	Placeholder. For posts in blog
-</p>
+<% @posts.each do |post| %>
+	<%= render 'posts/post', post: post %>
+	<br><br><br><br>
+<% end %>
